--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -7,4 +7,6 @@
   <label>Post Description:</label><br>
   <%= text_field_tag :'post[description]' %><br>
   
+  <%= submit_tag 'Submit Changes' %>
+  
 <% end %>
