--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -6,7 +6,7 @@
   <%= text_field_tag :'post[title]' %><br>
   
   <label>Post Description:</label><br>
-  <%= text_field_tag :'post[description]' %><br>
+  <%= text_area_tag :'post[description]' %><br>
   
   <%= submit_tag 'Submit Changes' %>
   
