--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -3,10 +3,10 @@
 <%= form_tag post_path(@post) do %>
 
   <label>Post Title:</label><br>
-  <%= text_field_tag :title %><br>
+  <%= text_field_tag :title, @post.title %><br>
   
   <label>Post Description:</label><br>
-  <%= text_area_tag :description %><br>
+  <%= text_area_tag :description, @post.description %><br>
   
   <%= submit_tag 'Submit Changes' %>
   
