--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Post Edit Form</h1>
 
-<%= form_tag post_path(@post) do %>
+<%= form_tag post_path(@post) method: 'put' do %>
 
   <label>Post Title:</label><br>
   <%= text_field_tag :title, @post.title %><br>
