automatically backed up by learn

--- a/app/views/posts/partials/form_layout.erb
+++ b/app/views/posts/partials/form_layout.erb
@@ -1,10 +1,10 @@
 <%= form_tag path, method: method_type do %>
 
   <label>Post Title:</label><br>
-  <%= text_field_tag :title, @post.title %><br>
+  <%= text_field_tag :title, existing_title %><br>
   
   <label>Post Description:</label><br>
-  <%= text_area_tag :description, @post.description %><br>
+  <%= text_area_tag :description, existing_description %><br>
   
   <%= submit_tag 'Submit Changes' %>
   
