automatically backed up by learn

--- a/app/views/posts/partials/form_layout.erb
+++ b/app/views/posts/partials/form_layout.erb
@@ -10,4 +10,8 @@
   
 <% end %>
 
-<!-- -->
+<!-- VARIABLES -->
+<!-- path : the action path -->
+<!-- method_type : the method (e.g. 'POST', 'PUT', etc.-->
+<!-- existing_title : fill in form with this title if it exists-->
+<!-- existing_description : fill in form with this description if it exists-->
