--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,5 +1,16 @@
 <h1>Post Edit Form</h1>
 
+<!-- VARIABLES -->
+<!-- 1. path : the action path -->
+<!-- 2. method_type : the method (e.g. 'POST', 'PUT', etc.-->
+<!-- 3. existing_title : fill in form with this title if it exists-->
+<!-- 4. existing_description : fill in form with this description if it exists-->
+
+<%= erc(:'partials/form_layout', :locals => {
+  path: post_path(@post), method_type: 'PUT',
+  existing_title: @post.title, existing_description: @post.description
+})
+
 
 
 <%= form_tag post_path(@post), method: 'PUT' do %>
