automatically backed up by learn

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,8 @@
+<%= erb(:'partials/form_layout', :locals => {
+  path: posts_path, method_type: 'POST',
+  existing_title: @post.title, existing_description: @post.description
+}) %>
+
 <%= form_tag posts_path do %>
   <label>Post title:</label><br>
   <%= text_field_tag :title %><br>
