automatically backed up by learn

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Post Edit Form</h1>
 
-<%= render 'partials/form' %>
+<%= render 'partials/form',  %>
 
 <%= erb(:'partials/form_layout', :locals => {
   path: post_path(@post), method_type: 'PUT',
