--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
 <%=
-  render '/partials/form',
+  render '/partials/_form',
   path: post_path(@post), method_type: 'POST',
   existing_title: '',
   existing_description: ''
