automatically backed up by learn

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,6 @@
 <%=
   render '/partials/_form',
-  path: post_path(@post), method_type: 'POST',
+  path: posts_path, method_type: 'POST',
   existing_title: '',
   existing_description: ''
 %>
