--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
 <%=
-  render 'posts/partials/form',
+  render 'partials/form',
   path: posts_path, method_type: 'POST',
   existing_title: '',
   existing_description: ''
