--- a/app/views/posts/partials/_form.html.erb
+++ b/app/views/posts/partials/_form.html.erb
@@ -11,7 +11,7 @@
 <% end %>
 
 <!-- VARIABLES -->
-<!-- 1. path : the action path -->
-<!-- 2. method_type : the method (e.g. 'POST', 'PUT', etc.-->
-<!-- 3. existing_title : fill in form with this title if it exists-->
-<!-- 4. existing_description : fill in form with this description if it exists-->
+<!-- 1. path :: the action path -->
+<!-- 2. method_type :: the method (e.g. 'POST', 'PUT', etc.-->
+<!-- 3. existing_title :: fill in form with this title if it exists-->
+<!-- 4. existing_description :: fill in form with this description if it exists-->
