automatically backed up by learn

--- a/app/views/posts/partials/_form.html.erb
+++ b/app/views/posts/partials/_form.html.erb
@@ -6,7 +6,7 @@
   <label>Post Description:</label><br>
   <%= text_area_tag :description, existing_description %><br>
   
-  <%= submit_tag 'Submit Changes' %>
+  <%= submit_tag 'Submit Post' %>
   
 <% end %>
 
